tests/ui/extern/extern-crate-visibility.edition2018.stderr
error[E0603]: crate import `core` is private
  --> $DIR/extern-crate-visibility.rs:9:10
   |
LL | use foo::core::cell;
   |          ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/extern-crate-visibility.rs:5:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^
help: consider importing one of these modules instead
   |
LL - use foo::core::cell;
LL + use crate::baz::core::cell;
   |
LL - use foo::core::cell;
LL + use std::cell;
   |

error[E0603]: crate import `core` is private
  --> $DIR/extern-crate-visibility.rs:12:10
   |
LL |     foo::core::cell::Cell::new(0);
   |          ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/extern-crate-visibility.rs:5:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^
help: consider importing one of these structs instead
   |
LL -     foo::core::cell::Cell::new(0);
LL +     crate::baz::core::cell::Cell::new(0);
   |
LL -     foo::core::cell::Cell::new(0);
LL +     std::cell::Cell::new(0);
   |
LL -     foo::core::cell::Cell::new(0);
LL +     ::core::cell::Cell::new(0);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
